replace btoa to js-base64 for utf-8 support

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <script src="eruda.js"></script>
-<script src="out/base64.min.js"></script>
+<script src="node_modules/js-base64/base64.min.js"></script>
 
 <script>
 eruda.init();
