--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <script src="eruda.js"></script>
 <script src="node_modules/js-base64/base64.min.js"></script>
 
-<script>
+<script type="module">
 eruda.init();
 //const consoles = erudaWxConsole(eruda)  
 //
@@ -31,175 +31,57 @@ eruda.show();
 
 var con = eruda.get('console');
 
+import { decode } from './src/decoder.js'
+import { encode } from './src/encoder.js'
+
 function parse(log) {
   try {
-    log = atob(log);
+    log = Base64.decode(log);
     return JSON.parse(log);
   } catch (e) {
-      window.console.warn(log);
-      throw e;
+    window.console.warn(log);
+    throw e;
   }
 }
 
 function addLog(log) {
   var obj = parse(log);
+  if (obj.args) {
+    obj.args = decode(obj.args);
+  }
   con.insert(obj);
 }
-// String, Number, Boolean
-// Date, RegExp
-// Array
-// ArrayBuffer
-// Int8Array, Uint8Array, Uint8ClampedArray, Int16Array, Uint16Array, Int32Array, Uint32Array, Float32Array, Float64Array
-// Set, Map, WeakSet, WeakMap
-console.log(addLog);
 
-const TypeIds = {
-  Undefined: 0,
-  Null: 1,
-  Boolean: 2,
-  Number: 3,
-  Funcion: 4,
-  String: 5,
-  Object: 6,
-  Bigint: 7,
-  Symbol: 8,
-  Unknown: 9,
-};
-
-const kMaxObj = 100;
-
-function encodeValue(ctx, v) {
-  var t = typeof v;
-  switch (t) {
-    case 'undefined':
-      return { t: TypeIds.Undefined };
-    case 'boolean':
-    case 'number':
-    case 'string':
-      return v;
-    case 'function':
-      // eval("(function() { return function 'v'() { '...' } })()");
-      return { t: TypeIds.Funcion, v: v.name };
-    case 'object':
-      if (v === null) {
-        return v;
-      } else {
-        return { t: TypeIds.Object, v: encodeObject(ctx, v) };
-      }
-    case 'bigint':
-      // v = BigInt(v)
-      return { t: TypeIds.Bigint, v: v.toString() };
-    case 'symbol':
-      // Symbol.for(v)
-      return { t: TypeIds.Symbol, v: Symbol.keyFor(v) };
-    default:
-      return { t: TypeIds.Unknown, v: t };
-  }
-};
-
-function encodeObject(ctx, obj) {
-  var id;
-  if (!ctx._objmap) {
-    ctx._objmap = new Map();
-  } else {
-    id = ctx._objmap.get(obj);
-    if (id !== undefined) {
-      return id;
+const log = {
+  send: function(type, args, stack) {
+    var enc = encode.apply(null, args);
+    var res = {
+      type: type,
+      args: enc,
+    };
+    if (stack) {
+      res.stack = stack;
     }
-  }
-  if (!ctx.o) {
-    ctx.o = [];
-  }
-  if (ctx.o.length >= kMaxObj) {
-    return -1;
-  }
-  var o = {};
-  id = ctx.o.length;
-  ctx.o.push(o);
-  ctx._objmap.set(obj, id);
-  for (var p in obj) {
-    o[p] = encodeValue(ctx, obj[p]);
-  }
-  return id;
+    var str = JSON.stringify(res);
+    var buf = Base64.encode(str);
+    addLog(buf);
+  },
+  debug: function () {
+    this.send('debug', arguments);
+  },
+  info: function debug() {
+    this.send('info', arguments);
+  },
+  log: function log() {
+    this.send('log', arguments);
+  },
+  warn: function () {
+    this.send('warn', arguments);
+  },
+  error: function () {
+    this.send('error', arguments, (new Error("")).stack);
+  },
 };
-
-function encode() {
-  var args = [];
-  var ctx = {};
-  var argc = arguments.length;
-  for (var i = 0; i < argc; ++i) {
-    args[i] = encodeValue(ctx, arguments[i]);
-  }
-  var ret = {
-    a: args
-  };
-  if (ctx.o) {
-    ret.o = ctx.o;
-  }
-  return ret;
-}
-
-function decodeValue(ctx, v) {
-  if (v === null) {
-    return null;
-  }
-  var t = typeof v;
-  if (t !== 'object') {
-    return v;
-  }
-  switch (v.t) {
-    case TypeIds.Undefined:
-      return undefined;
-    //case TypeIds.Null:
-    //  return null;
-    //case TypeIds.Boolean:
-    //  return v.v;
-    //case TypeIds.Number:
-    //  return v.v;
-    case TypeIds.Funcion:
-      return eval('(function() { return function ' + v.v + '() { "..." } })()');
-    //case TypeIds.String:
-    //  return v.v;
-    case TypeIds.Object:
-      if (v.v === -1) {
-        return {};
-      }
-      //console.assert(ctx.o[v.v]);
-      return ctx.o[v.v];
-    case TypeIds.Bigint:
-      return /*BigInt ? BigInt(v.v) : */'BigInt(' + v.v + ')';
-    case TypeIds.Symbol:
-      return Symbol ? Symbol.for(v.v) : 'Symbol(' + v.v + ')';
-    case TypeIds.Unknown:
-      return v.v;
-  }
-}
-
-function decodeObject(ctx, i, obj) {
-  var o = {};
-  ctx.o[i] = o;
-  for (var p in obj) {
-    o[p] = decodeValue(ctx, obj[p]);
-  }
-  return o;
-}
-
-function decode(args) {
-  const a = args.a;
-  const ctx = {};
-  if (args.o) {
-    var o = args.o;
-    ctx.o = [];
-    for (let i = o.length - 1; i >= 0; i--) {
-      decodeObject(ctx, i, o[i]);
-    }
-  }
-  const ret = [];
-  for (let i = a.length - 1; i >= 0; i--) {
-    ret[i] = decodeValue(ctx, a[i]);
-  }
-  return ret;
-}
 
 
 </script>
