encoder/decoder build in types

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ eruda.get().config.set({
   displaySize: 100,
   transparency: 1,
   tinyNavBar: true,
-  navBarBgColor: '#006ab2'
+  navBarBgColor: '#006ab2',
 });
 //eruda.remove('settings');
 eruda.show();
